# jAER-mirror

./: README.txt
biasgen/FixedBiasGenDesignKit/: ledit.elm  ml49_15.md
biasgen/FixedBiasGenDesignKit/MOSIS-SCMOS-SUBM/: biasSplitterOctave.sp  biasSplitterOctaveTerminate.sp  biasgen-log.txt  biasgen-lvs.sp  biasgen-scmos-subm.tdb  biasgen.c  lvs.sp  lvs.vdb  models.txt  scn4me_subm.ext
biasgen/FixedBiasGenDesignKit/docs/: biasgenDesignKit.doc
biasgen/ProgrammableBiasGenDesignKits/biasgenDesignKitCIS180v1/: biasgenCIS180v1.tdb
biasgen/ProgrammableBiasGenDesignKits/biasgenMotionChipV4/: ams_C35.ext  biasgenMDC.tdb  readme.txt
biasgen/ProgrammableBiasGenDesignKits/programmableBiasgenUserGuide/: User guide.mht
biasgenSettings/: tmpdiff128.xml
branches/: README.txt
branches/jAER2/: .classpath  pom.xml  sonar-project.properties
branches/jAER2/jars/: libs.txt
branches/jAER_2.0/: .classpath  .project  pom.xml
branches/jAER_2.0/jars/: libs.txt
branches/linux/: README.txt  jAERViewer.sh
branches/linuxjAER/biasgenSettings/: CochleaAMS.xml  tmpdiff128.xml
branches/linuxjAER/filterSettings/: goalieSetup.xml
branches/linuxjAER/jSmoothExeLauncher/: jAERViewer.jsmooth
branches/multisrc/java/: JAERViewerRunning.txt
branches/net.sf.jaer.1.0/: jAERViewer.sh
branches/net.sf.jaer.1.0/biasgenSettings/: CochleaAMSjuly14_2pm.xml  dvs128_slow.xml
branches/net.sf.jaer.1.0/host/: guid.txt
branches/net.sf.jaer.1.0/utilities/: jAERLauncher.cmd
branches/netsfjaer/biasgenSettings/: CochleaAMS1b-debug.xml  CochleaAMS1b.xml  DVS128Fast.xml  DVS128Slow.xml  Tmpdiff128StereoBoard.xml  goalie.xml  (+1 more)
branches/pseye/: ant-build.cmd  jAERViewer.sh  jaer.exe4j
cAER/trunk/: .project  CMakeLists.txt  LICENSE  README  RELEASE_NOTES  main.c  main.h
cAER/trunk/base/: config.c  config_server.c  log.c  log.h  mainloop.c  mainloop.h  misc.c  module.c  module.h
cAER/trunk/docs/: caer.tex
cAER/trunk/events/: common.h  ear.h  frame.h  imu6.h  imu9.h  polarity.h  sample.h  special.h
cAER/trunk/ext/atomic_ops/atomic_ops/: flagptr.h
cAER/trunk/ext/atomic_ops/atomic_ops/gcc/: armv7.h  sparcv9.h  x86-64.h
cAER/trunk/ext/sshs/: sshs.h  sshs_helper.c  sshs_node.c
cAER/trunk/modules/backgroundactivityfilter/: backgroundactivityfilter.c
cAER/trunk/modules/ini/: davis_common.c  davis_common.h  davis_fx2.c  davis_fx2.h  davis_fx3.c  davis_fx3.h  dvs128.c  dvs128.h
cAER/trunk/modules/statistics/: statistics.c  statistics.h
cAER/trunk/modules/visualizer/: visualizer.c  visualizer.h
cAER/trunk/utils/caerctl/: caerctl.c
devices/drivers/: readme.txt
docs/: AERHardwareAndCabling.doc  biases_settings.xls
filterSettings/: goalieSetup.xml
flashy/trunk/: .classpath  .project  ChangeLog  pom.xml
jAER/trunk/: jaer1.5_win_jre_x64.exe4j
jSmoothExeLauncher/: jAERTrayLauncher.jsmooth  readme.txt
libcaer/trunk/: .cproject  .project  CMakeLists.txt  README
libcaer/trunk/include/: CMakeLists.txt  libcaer.h  log.h
libcaer/trunk/include/devices/: davis.h  davis_fx2.h  davis_fx3.h  dvs128.h
libcaer/trunk/include/events/: common.h  ear.h  frame.h  imu6.h  imu9.h  packetContainer.h  polarity.h  sample.h  special.h
libcaer/trunk/src/: CMakeLists.txt  davis_common.c  davis_common.h  davis_fx2.c  davis_fx3.c  davis_fx3.h  dvs128.c  dvs128.h  log.c
libcaer/trunk/src/ringbuffer/: ringbuffer.c
tags/Release_1.0/: CypressFX2EEProm.cmd  jAERLauncher.cmd
trunk/: .gitignore  .project  CCleaner.lnk  Cisco AnyConnect VPN Client.lnk  README.txt  ServoTest.cmd  Shortcut to brainFairVideo2010.wmv.lnk  Shortcut to dxp.exe.lnk  Shortcut to jAERViewer.exe.lnk  driver_linux.sh  jAERViewer.cmd  jAERViewer.sh  jaer.exe4j  mount.sh
trunk/WinRun4J/: WinRun4J.url  jaer.ini
trunk/biasgenSettings/: ATIS304lowerThresholds.xml  CochleaAMS1b-debug2apr3rdchip5lpfcascade300to10kHzmusic.xml  CochleaAMS1b-debug2feb2aQchip5lpfparallelVin2100to10kHz.xml  CochleaAMS1b-debug2feb2bQchip5lpfparallelVin2100to10kHz.xml  CochleaAMS1b-debug2feb3aQchip5lpfparallelVin2100to10kHz.xml  CochleaAMS1b-debug2feb3rdmessbpfthchip5lpfcascadeVin2100to10kHz.xml  CochleaAMS1b-debug2jan18thchip5bpfcascade100to10kHz.xml  CochleaAMS1b-debug2jan18thchip5bpfcascadeadapQ100to10kHz.xml  CochleaAMS1b-debug2jan18thchip5lpfcascade20to10kHz.xml  CochleaAMS1b-debug2jan21stchip5lpfcascade100to10kHz.xml  CochleaAMS1b-debug2jan21stchip5lpfparallel100to10kHz.xml  CochleaAMS1b-jan1stkillackchip5rectparallel20to10kHzVdd3d3.xml  CochleaAMS1b.xml  CochleaAMS1bBoard1.xml  CochleaAMS1bBoard150Hzto6kHz.xml  CochleaAMS1bBoard2.xml  CochleaAMS1c.xml  CochleaAMSjuly14_2pm.xml  CochleaAMSjuly14_4pm.xml  DVS128Fast.xml  DVS128Slow.xml  DVS320.xml  DVS320_2_4_2009.xml  MDC2D.xml  MDC2DBoard2.xml  SeeBetter10.xml  SlotCarRacerBiases.xml  TCVS320.xml  Tmpdiff128StereoBoard-PawTrackerSept29.xml  Tmpdiff128StereoPair.xml  cDVSTest10.xml  cDVSTest10_pixeltest_noevents.xml  cDVSTest10_spectral.xml  cDVSTest20_ADC.xml  cDVSTest20_dvs.xml  cDVSTest30.xml  cochleaAMS0.xml  dvs128_fast.xml  dvs128_slow.xml  goalie.xml  (+4 more)
trunk/blender/: README  camera_event_generator.c  monster_truck4.blend  monster_truck5_thinner_track_baked-noC.blend
trunk/doc/: AER Hardware and cabling.doc  biases_settings.xls  device_graph.dia
trunk/drivers/: readme.txt
trunk/exe4j/: Java Exe Maker - exe4j.url
trunk/exe4j_x86/: License keys for order 26870185 exe4j.eml
trunk/filterSettings/: 100616GestureBF2DSetup.xml  100831 stereo gesture setting - old.xml  101115 stereo gesture setting - ini - low th.xml  101115 stereo gesture setting - ini.xml  BlurringFilterStereoTracker.xml  BlurringFilterTracking.xml  Driver.xml  VD_BlurringFilterTracking.xml  VirtualDrummer.xml  VirtualDrummer2.xml  capocaccia2010_WavingHandDemo.xml  cudaGabor.xml  eyeTrackerExample2.xml  goalieSetup.xml  goalieSetup3.xml  highwayTracking.xml  learning_goalie.xml  trackCorners.xml
trunk/jSmoothExeLauncher/: jAERTrayLauncher.jsmooth  jAERViewer.jsmooth  readme.txt
trunk/utilities/: CypressFX2EEProm.cmd  ServoTest.cmd  readme.txt
web/: index.php  jAER.ste
web/files/: pawtracking_large1906.xml
(+5277 files in other folders)
